sounds added, basic keypress event listener added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <script>
       // You can also require other files to run in this process
       require('./renderer.js')
+      require('./functions.js')
     </script>
+    <div class="audio">
+      <audio id="A" src="sounds/A.mp3" preload="auto"></audio>
+    </div>
   </body>
 </html>
